yes I took 6 hours to develop an MCTS algorithm for my agent even though MCTS sucks for anything with more than 2 players so I made it run only with 2 players and am still using a random player for more than 2 :) goodnight <3